--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
 	background-color: #949fb5;
-};
-p{background-color:#ffffff;
-};
+}
+p{color:#C14242;
+}
 
-link{color:#ffffff;
-};
+link{color:#C14242;
+}
