--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@ body{
 	background-color: #949fb5;
 }
 
-h1, p{color:#ffffff;
+h1, p{
+	color: #ffffff;
 }
 
-link{color:#ffffff;
+link{
+	color: #ffffff;
 }
