--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 body{
 	background-color: #949fb5;
 }
-h1, li{color:#ffffff;
+
+h1{
+	color: #ffffff;
 }
 
-link{color:#ffffff;
+link{
+	color: #ffffff;
 }
