--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-body{
+body {
 	background-color: #949fb5;
 }
 
-h1{
-	font-color: #ffffff;
+h1 {
+	color: #ffffff;
 }
 
-link{
-	font-color: #ffffff;
+link {
+	color: #ffffff;
 }
