--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,5 +1,5 @@
 header{
-	background-image: url("home.jpg");
+	background-image: url("home.JPG");
 	background-repeat: no-repeat;
 	background-position: cover;
 }
