--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,4 +1,6 @@
 header{
+	background: "images/home.jpg";
+	background-size: cover;
 	padding: 20px;
 }
 
@@ -6,4 +8,11 @@ a{}
 
 nav a{
 	color: #000;
+}
+
+h1{
+	text-transform: uppercase;
+	text-align: center;
+	color: #ffffff;
+	font-family: "Times New Roman";
 }
