--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -13,6 +13,6 @@ nav a{
 h1{
 	text-transform: uppercase;
 	text-align: center;
-	color: #ffffff;
+	color: #000000;
 	font-family: "Times New Roman";
 }
