--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -19,5 +19,12 @@ h1{
 
 hr{
 	width: 100px;
-	
+
+}
+
+#slogan{
+	font-family: "Times New Roman";
+	font-size: 16px;
+	text-align: center;
+	color: #000;
 }
