--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,5 +1,5 @@
 header{
-	background-color: #65acdb;
+	background: #65acdb;
 	background-size: cover;
 	padding: 20px;
 }
@@ -18,7 +18,8 @@ h1{
 }
 
 hr{
-	width: 100px;
+	width: 100px
+	color: #000;
 
 }
 
