--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -34,4 +34,5 @@ hr{
 div{
 	background: url(https://breidigaml.github.io/unit_3/images/home.JPG);
 	background-size: cover;
+	margin-bottom: 100px;
 }
