--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -31,8 +31,40 @@ hr{
 	color: #fff;
 }
 
-div{
+.container{
 	background: url(https://breidigaml.github.io/unit_3/images/home.JPG);
 	background-size: cover;
 	margin-bottom: 100px;
+}
+
+/* Container needed to position the button. Adjust the width as needed */
+.container {
+  position: relative;
+  width: 50%;
+}
+
+/* Make the image responsive */
+.container img {
+  width: 100%;
+  height: auto;
+}
+
+/* Style the button and place it in the middle of the container/image */
+.container .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.container .btn:hover {
+  background-color: black;
 }
