--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -32,7 +32,7 @@ hr{
 }
 
 .container{
-	background: url(https://breidigaml.github.io/unit_3/images/home.JPG)  alt="Welcome to Dairy Free Girl Website" title="Welcome";
+	background: url(https://breidigaml.github.io/unit_3/images/veganpestopasta.JPG)  alt="Welcome to Dairy Free Girl Website" title="Welcome";
 	background-size: cover;
 	margin-bottom: 100px;
 }
