--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -31,7 +31,7 @@ hr{
 	color: #fff;
 }
 
-.container{
+div{
 	background: url(https://breidigaml.github.io/unit_3/images/dc.JPG)  alt="Welcome to Dairy Free Girl in DC" " title="Welcome";
 	background-size: cover;
 	margin-bottom: 100px;
