--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -2,6 +2,8 @@ div{
 	background: url(https://breidigaml.github.io/unit_3/images/dc.JPG)  alt="Welcome to Dairy Free Girl in DC" " title="Welcome";
 	background-size: cover;
 	margin-bottom: 100px;
+	width: 100%;
+  	height: 100%;
 }
 
 h1{
@@ -27,13 +29,13 @@ hr{
 header{
 	background: #65acdb;
 	background-size: cover;
-	padding: 20px;
 }
 
 a{}
 
 nav a{
-	color: #fff;
+	color: #fff
+	text-align center;
 
 }
 
