--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -33,7 +33,7 @@ body{
 }
 
 .hero h1{
-	*/ Text styles */
+	/* Text styles */
 
 	text-transform: uppercase;
 	text-align: center;
@@ -41,7 +41,7 @@ body{
 	font-family: "Times New Roman";
 	font-size: 5em;
 
-	*/ Margins*/
+	/* Margins*/
 	margin-top: 0;
 	margin-bottom: 0.5em;
 }
