--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -25,7 +25,7 @@ body{
     background-attachment: fixed;
 }
 
-	background: img src= "images/home.jpg"  alt="Welcome to Dairy Free Girl in DC" " title="Welcome";
+	background: img src= "images/home.JPG"  alt="Welcome to Dairy Free Girl in DC" " title="Welcome";
 	background-size: cover;
 	margin-bottom: 100px;
 	width: 100%;
@@ -46,7 +46,7 @@ body{
 	margin-bottom: 0.5em;
 }
 
-.hero .btn {
+.btn {
     /* Positioning and sizing */
     display: block;
     width: 200px;
