--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,74 +1,16 @@
 body{
 	margin: 0;
 	font-family: sans-serif;
-} 
-
-.hero{
-	/* Sizing */
-	width: 100vw;
-	height:100vh;
-
-	/* Flexbox stuff */
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	/* Text styles */
-	text-align: center;
-	color: white;
-
-	/* Background styles */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), 
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
 }
 
-	background: img src= "images/home-background.jpg"  alt="Welcome to Dairy Free Girl in DC" " title="Welcome";
+.hero{ background: src= "images/home-background.jpg"  alt="Welcome to Dairy Free Girl in DC" " title="Welcome";
 	background-size: cover;
 	margin-bottom: 100px;
 	width: 100%;
   	height: 100%;
 }
 
-.hero h1{
-	/* Text styles */
 
-	text-transform: uppercase;
-	text-align: center;
-	color: #000;
-	font-family: "Times New Roman";
-	font-size: 5em;
-
-	/* Margins*/
-	margin-top: 0;
-	margin-bottom: 0.5em;
-}
-
-.btn {
-    /* Positioning and sizing */
-    display: block;
-    width: 200px;
-    
-    /* Padding and margins */
-    padding: 1em;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    
-    /* Text styles */
-    color: white;
-    text-decoration: none;
-    font-size: 1.5em;
-    
-    /* Border styles */
-    border: 3px solid black;
-    border-radius: 20px;
-
-/* Background styles */
-    background-color: rgba(147, 112, 219, 0.8);
-}
 
 hr{
 	width: 100px
