--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -19,6 +19,13 @@ hr{
 
 }
 
+h1{
+	font-family: "Times New Roman";
+	font-size: 70px;
+	text-align: center;
+	color: #000;
+}
+
 #slogan{
 	font-family: "Times New Roman";
 	font-size: 16px;
@@ -29,6 +36,8 @@ hr{
 header{
 	background: #65acdb;
 	background-size: cover;
+	width: 100%;
+	height: 50px;
 }
 
 a{}
