--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -5,6 +5,7 @@ body{
 
 div{ 
 	background-image: url('img/abstract.jpg');
+	background-color: #aec5ea;
 	background-size: cover;
 	margin-bottom: 100px;
 	width: 100%;
