--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -9,6 +9,8 @@ div{
 	background-size: cover;
 	width: 100%;
   	height: 800px;
+  	padding-right: 50px;
+  	padding-left: 50px;
 }
 
 
@@ -50,6 +52,9 @@ nav a{
 	color: #fff;
 	text-align center;
 	margin: 20px;
+	padding-top: 50px;
+	padding-right: 50px;
+	padding-left: 50px;
 
 }
 
