--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -11,13 +11,6 @@ div{
   	height: 800px;
   	padding-right: 50px;
   	padding-left: 50px;
-}
-
-
-
-hr{
-	width: 100px
-	color: #000;
 
 }
 
@@ -42,6 +35,11 @@ header{
 	background-size: cover;
 	width: 100%;
 	height: 50px;
+	padding-top: 20px;
+	padding-right: 50px;
+	padding-left: 50px;
+	text-align: center;
+
 }
 
 a{
