--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 div{ 
-	background-image: url('https://images.pexels.com/photos/255377/pexels-photo-255377.jpeg?cs=srgb&dl=abstract-background-blur-255377.jpg&fm=jpg');
+	background-image: url('images/dc.JPG');
 	background-color: #aec5ea;
 	background-size: cover;
 	width: 100%;
