--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 div{ 
-	background-image: url('images/dc.JPG');
+	background-image: url('https://images.pexels.com/photos/279100/pexels-photo-279100.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
 	background-color: #aec5ea;
 	background-size: cover;
 	width: 100%;
@@ -35,7 +35,7 @@ header{
 	background-size: cover;
 	width: 100%;
 	height: 50px;
-	padding-top: 20px;
+	padding-top: 50px;
 	padding-right: 50px;
 	padding-left: 50px;
 	text-align: center;
