--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 div{ 
-	background-image: url('https://www.pexels.com/photo/architecture-attractions-building-city-208702/');
+	background-image: url('https://images.pexels.com/photos/208702/pexels-photo-208702.jpeg?cs=srgb&dl=architecture-attractions-building-208702.jpg&fm=jpg');
 	background-color: #aec5ea;
 	background-size: cover;
 	width: 100%;
