--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -18,7 +18,7 @@ h1{
 	font-family: "Times New Roman";
 	font-size: 70px;
 	text-align: center;
-	color: #000;
+	color: #fff;
 	margin-top: 0px;
 	padding-top: 40px;
 }
@@ -27,7 +27,7 @@ h1{
 	font-family: "Times New Roman";
 	font-size: 16px;
 	text-align: center;
-	color: #000;
+	color: #fff;
 }
 
 header{
