--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -7,6 +7,7 @@ div{
 	background-image: url('https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg');
 	background-color: #aec5ea;
 	background-size: cover;
+	background-position: bottom-left
 	width: 100%;
   	height: 800px;
   	padding-right: 50px;
@@ -34,7 +35,7 @@ header{
 	background-size: cover;
 	width: 100%;
 	height: 30px;
-	padding-top: 20px;
+	padding-top: 0px;
 	padding-right: 50px;
 	padding-left: 50px;
 	text-align: center;
