--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -35,6 +35,7 @@ header{
 	background-size: cover;
 	width: 100%;
 	height: 30px;
+	margin-top: 0px;
 	padding-top: 0px;
 	padding-right: 50px;
 	padding-left: 50px;
