--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -35,7 +35,8 @@ header{
 	background-size: cover;
 	width: 100%;
 	height: 30px;
-	margin-top: 0px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	padding-top: 50px;
 	padding-right: 50px;
 	padding-left: 50px;
@@ -63,6 +64,6 @@ nav a{
 #recipes{
 	width: 30px;
 	height:30px;
-	
+
 }
 
