--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -35,7 +35,7 @@ header{
 	background-size: cover;
 	width: 100%;
 	height: 30px;
-	margin-top: 20px;
+	margin-top: 0px;
 	margin-bottom: 20px;
 	padding-top: 50px;
 	padding-right: 50px;
@@ -56,14 +56,15 @@ nav a{
 	padding-top: 50px;
 	padding-right: 50px;
 	padding-left: 50px;
+	padding-bottom: 50px;
 	text-decoration: none;
 
 }
 
 
 #recipes{
-	width: 30px;
-	height:30px;
+	width: 450px;
+	height: 450px;
 
 }
 
