--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -60,11 +60,24 @@ nav a{
 	text-decoration: none;
 
 }
+#featured{
+	background-image: url(src="images/antique.jpg");
 
+}
 
 #recipes{
+	background-image: url(src="images/recipes.jpg");
 	width: 450px;
 	height: 450px;
 
 }
 
+#reviews{
+	background-image: url(src="images/blog.jpg");
+
+}
+
+
+#travel{
+	background-image: url(src="images/travel.jpg");
+}
