--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -109,3 +109,10 @@ h3, h4, h5{
 aside{
 	float: right;
 }
+
+.blogs{
+	font-family: "Times New Roman";
+	font-size: 40px;
+	text-align: center;
+	color: #000;
+}
