--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -113,6 +113,6 @@ aside{
 .blogs{
 	font-family: "Times New Roman";
 	font-size: 40px;
-	text-align: center;
+	text-align: justify;
 	color: #000;
 }
