--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,3 +1,7 @@
+<style>
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500i,600|Open+Sans:300,400|Playfair+Display:400,700');
+</style>
+
 *{
 	margin: 0px;
 	padding: 0px;
@@ -20,7 +24,7 @@ div{
 }
 
 h1{
-	font-family: "Times New Roman";
+	font-family: 'Playfair Display', serif;
 	font-size: 70px;
 	text-align: center;
 	color: #fff;
