--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,6 +1,4 @@
-<style>
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500i,600|Open+Sans:300,400|Playfair+Display:400,700');
-</style>
 
 *{
 	margin: 0px;
@@ -34,7 +32,8 @@ h1{
 }
 
 #slogan{
-	font-family: "Times New Roman";
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300px
 	font-size: 25px;
 	text-align: center;
 	color: #fff;
