--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -34,9 +34,16 @@ h1{
 #slogan{
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300px
-	font-size: 25px;
+	font-size: 35px;
 	text-align: center;
 	color: #fff;
+}
+
+h2{
+	font-family: 'Playfair Display', sans-serif;
+	font-weight: 700px;
+	font-size: 50px;
+
 }
 
 header{
