--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-	margin: 0;
+	margin-left: 20px;
 }
 
 p{
@@ -22,6 +22,7 @@ div{
   	height: 800px;
   	padding-right: 50px;
   	padding-left: 50px;
+  	margin: 0px;
 }
 
 h1{
