--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -7,11 +7,13 @@
 
 body{
 	margin-left: 0px;
+	font-size: 1em;
 }
 
 p{
 	font-family: 'Open Sans', serif;
 	margin: 10px;
+	font-size: 1em;
 
 }
 
@@ -84,7 +86,7 @@ nav a{
 	color: #fff;
 	text-align center;
 	font-family: 'Playfair Display', serif;
-	font-size: 20px;
+	font-size: 1.25em;
 	margin: 5px;
 	padding-top: 50px;
 	padding-right: 50px;
@@ -148,7 +150,8 @@ aside{
 
 .blogs{
 	font-family: 'Open Sans', sans-serif;
-	font-size: 40px;
+	font-size: 2.5em;
 	text-align: justify;
 	color: #000;
+	width: 30em;
 }
