--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -135,7 +135,7 @@ ul, ol{
 
 footer{
 	background-color: #f2f2f2;
-	padding: 20px;
+	padding-top: 20px;
 	text-align: center;
 	font-family: 'Playfair Display', serif;
 	font-weight: 400px;
