--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -90,10 +90,7 @@ nav a{
 	font-family: 'Playfair Display', serif;
 	font-size: 1.25em;
 	margin: 5px;
-	padding-top: 50px;
-	padding-right: 50px;
-	padding-left: 50px;
-	padding-bottom: 50px;
+	padding: 50px, 10px;
 	text-decoration: none;
 
 }
