--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -69,6 +69,7 @@ header{
 	height: 30px;
 	margin-top: 0px;
 	margin-bottom: 20px;
+	margin-right: 30px;
 	padding-top: 20px;
 	padding-right: 50px;
 	padding-left: 50px;
