--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -17,7 +17,7 @@ p{
 
 }
 
-div{ 
+#wrapper{ 
 	background-image: linear-gradient(rgba(0, 0, 0, 0.35),#0000002e), url(https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg);
 	background-color: #aec5ea;
 	background-size: cover;
@@ -134,9 +134,6 @@ ul, ol{
 	margin-bottom: 30px;
 }
 
-aside{
-	float: right;
-}
 
 .blogs{
 	font-family: 'Open Sans', sans-serif;
@@ -144,6 +141,7 @@ aside{
 	text-align: justify;
 	color: #000;
 	width: 30em;
+	float: right;
 }
 
 footer{
