--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -17,7 +17,7 @@ p{
 
 }
 
-#wrapper{ 
+.wrapper{ 
 	background-image: linear-gradient(rgba(0, 0, 0, 0.35),#0000002e), url(https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg);
 	background-color: #aec5ea;
 	background-size: cover;
