--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -103,7 +103,23 @@ nav a{
 
 #welcome div{
 	float:left;
-	width: 65%;
+	padding: 20px;
+}
+
+#left{
+	padding: 20px;
+	float: left;
+	width: 62%;
+}
+
+#right{
+	background-color: #f2f2f2;
+	border: 1px black solid;
+	padding: 20px;
+	margin-bottom: 10px;
+	margin-right: 10px;
+	float: right;
+	width: 30%;
 }
 
 #featured{
