--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -155,6 +155,7 @@ nav a{
 	font-family: 'Playfair Display', serif;
 	font-weight: 400px;
 	font-size: 1.3em;
+	color: #fff;
 	float: left;
 	width: 50%;
 	height: 20em;
