--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -138,7 +138,7 @@ nav a{
 }
 
 #recipes{
-	background-image: url("../images/recipes.jpg") no-repeat;
+	background-image: url("../images/recipes.jpg");
 	font-family: 'Playfair Display', serif;
 	font-weight: 400px;
 	font-size: 1.3em;
