--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -147,6 +147,7 @@ nav a{
 	color: #fff;
 	float: left;
 	width: 100%;
+	height: 500px;
 	text-align: center;
 	line-height: 6em;
 }
@@ -160,6 +161,7 @@ nav a{
 	color: #fff;
 	float: left;
 	width: 100%;
+	height: 500px;
 	text-align: center;
 	line-height: 6em;
 }
@@ -174,6 +176,7 @@ nav a{
 	color: #fff;
 	float: left;
 	width: 100%;
+	height: 500px;
 	text-align: center;
 	line-height: 6em;
 }
