--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -202,6 +202,11 @@ ul, ol{
 	width: 30em;
 }
 
+.space{
+	margin-top: 20px
+	background-color: #000000;
+}
+
 footer{
 	background-color: #f2f2f2;
 	padding-top: 20px;
