--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -18,11 +18,11 @@ p{
 }
 
 #block{
-	background-color: #f2f2f2;
+	background-color: #dededec2;
 	color: #000000;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
-	line-height: 1px;
+	line-height: 18px;
 }
 
 #header{ 
