--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -23,13 +23,14 @@ p{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	line-height: 18px;
+	line-break: normal;
 }
 
 #header{ 
 	background-image: linear-gradient(rgba(0, 0, 0, 0.35),#0000002e), url(https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg);
 	background-color: #aec5ea;
 	background-size: cover;
-	background-position: bottom-left
+	background-position: bottom-left;
 	width: 100%;
   	height: 800px;
   	padding-right: 50px;
