--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -269,6 +269,16 @@ div / section {
     background-color: #FFE2B8;
     border: 1px black solid;
     padding: 20px;
+
+}
+
+@media only screen and (min-width: 1800px){
+	body{
+		font-size: 24px;
+	}
+#all{
+	width: 1600px;
+}
 }
 
 .clearfix:after {
