--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -217,7 +217,7 @@ ul, ol{
 	font-size: 2.5em;
 	text-align: justify;
 	color: #000;
-	width: 30em;
+	width: 100%;
 }
 
 .space{
@@ -279,6 +279,10 @@ div / section {
 #all{
 	width: 1600px;
 }
+}
+
+@media only screen and (max-width: 1130px){
+
 }
 
 .clearfix:after {
