--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -142,6 +142,7 @@ nav a: hover{
 
 #featured{
 	background-image: url("../images/blog.jpg");
+	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: 'Playfair Display', serif;
 	font-weight: 400px;
