--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -22,7 +22,7 @@ p{
 	background-image: linear-gradient(rgba(0, 0, 0, 0.35),#0000002e), url(https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg);
 	background-color: #aec5ea;
 	background-size: cover;
-	background-position: bottom-left;
+	background-position: bottom left;
 	width: 100%;
   	height: 800px;
   	padding-right: 50px;
@@ -42,7 +42,7 @@ h1{
 
 #slogan{
 	font-family: 'Open Sans', sans-serif;
-	font-weight: 300px
+	font-weight: 300;
 	font-size: 35px;
 	text-align: center;
 	color: #fff;
@@ -50,15 +50,15 @@ h1{
 
 h2{
 	font-family: 'Playfair Display', serif;
-	font-weight: 700px;
+	font-weight: 700;
 	font-size: 3em;
 
 }
 
 h3, h4, h5{
 	font-family: 'Playfair Display', serif;
-	font-weight: 400px;
-	margin: 20px, 0;
+	font-weight: 400;
+	margin: 20px 0;
 	margin-bottom: 10px;
 }
 
@@ -88,15 +88,16 @@ a{
 
 nav a{
 	color: #fff;
-	text-align center;
+	text-align: center;
 	font-family: 'Playfair Display', serif;
 	font-size: 1.25em;
 	margin: 30px;
-	padding: 50px, 10px;
+	padding: 50px 10px;
 	text-decoration: none;
+	border: 2px solid white;
 }
 
-nav a: hover{
+nav a:hover{
 	background-color: #020202;
 }
 
@@ -222,7 +223,7 @@ ul, ol{
 }
 
 .space{
-	margin-top: 20px
+	margin-top: 20px;
 	background-color: #000000;
 }
 
@@ -231,7 +232,7 @@ footer{
 	padding-top: 20px;
 	text-align: center;
 	font-family: 'Playfair Display', serif;
-	font-weight: 400px;
+	font-weight: 400;
 	margin-top: 30px;
 
 }
