--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -114,7 +114,7 @@ nav a:hover{
 
 
 #left{
-	padding: 20px;
+	/*padding: 20px;*/
 	float: left;
 	width: 62%;
 }
@@ -122,7 +122,7 @@ nav a:hover{
 #right{
 	background-color: #f2f2f2;
 	border: 1px black solid;
-	padding: 20px;
+	/*padding: 20px;*/
 	margin-bottom: 10px;
 	margin-right: 10px;
 	float: right;
@@ -286,7 +286,7 @@ div / section {
 }
 }
 
-@media only screen and (max-width: 1130px){
+@media only screen and (max-width: 1200px){
 
 }
 
