--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -277,6 +277,12 @@ div / section {
 
 }
 
+
+@media only screen and (max-width: 1870px){
+	body{
+	}
+
+
 @media only screen and (min-width: 1840px){
 	body{
 		font-size: 16px;
