--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -122,7 +122,7 @@ nav a:hover{
 #right{
 	background-color: #f2f2f2;
 	border: 1px black solid;
-	/*padding: 20px;*/
+	padding: 20px
 	margin-bottom: 10px;
 	margin-right: 10px;
 	float: right;
