--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -283,6 +283,15 @@ div / section {
 	width: 100%;
 	padding: 20px;
 	}
+#right{
+	background-color: #f2f2f2;
+	border: 1px black solid;
+	padding: 20px
+	margin-bottom: 10px;
+	margin-right: 20px;
+	float: right;
+	width: 30%;
+}
 
 
 @media only screen and (min-width: 1840px){
