--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -282,7 +282,9 @@ div / section {
 #welcome{
 	width: 100%;
 	padding: 20px;
+	margin-bottom: 10px;
 	}
+
 #right{
 	background-color: #f2f2f2;
 	border: 1px black solid;
