--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -307,11 +307,25 @@ div / section {
 	}
 
 	#wrapper div{
-	float: left;
-	width: 25%;
-	/*margin-top: 50px;*/
-}
+		float: left;
+		width: 25%;
+		/*margin-top: 50px;*/
+	}
 
+	#right{
+		background-color: #f2f2f2;
+		border: 1px black solid;
+		padding: 20px
+		margin-bottom: 10px;
+		margin-right: 20px;
+		float: right;
+		width: 30%;
+	}
+
+	#left{
+		padding: 20px;
+		float: left;
+		width: 62%;
 	}
 
 	#welcome{
@@ -320,7 +334,7 @@ div / section {
 	}
 
 	#all{
-	width: 1840px;
+		width: 1840px;
 
 	}
 
