--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -312,7 +312,7 @@ div / section {
 		/*margin-top: 50px;*/
 	}
 
-	#right{
+	/*#right{
 		background-color: #f2f2f2;
 		border: 1px black solid;
 		padding: 20px
@@ -326,11 +326,11 @@ div / section {
 		padding: 20px;
 		float: left;
 		width: 62%;
-	}
+	}*/
 
 	#welcome{
 		padding: 20px;
-		margin-bottom: 10px;
+		margin-bottom: 50px;
 	}
 
 	#all{
