--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -180,7 +180,7 @@ nav a:hover{
 	font-family: 'Playfair Display', serif;
 	font-weight: 400;
 	font-size: 1.3em;
-	color: #fff;
+	color: #000;
 	float: left;
 	width: 100%;
 	height: 500px;
