--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -323,12 +323,12 @@ div / section {
 		float: right;
 		width: 30%;
 	}
-
+*/
 	#left{
 		padding: 20px;
 		float: left;
 		width: 62%;
-	}*/
+	}
 
 	#welcome{
 		padding: 20px;
