--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -354,7 +354,9 @@ div / section {
 }
 
 @media only screen and (max-width: 750px){
-
+	#welcome{
+		display: none;
+	}
 }
 
 @media only screen and (max-width: 660px){
