--- a/unit_7/css/style.css
+++ b/unit_7/css/style.css
@@ -357,6 +357,17 @@ div / section {
 	#welcome section{
 		display: none;
 	}
+
+	#header{ 
+		background-image: linear-gradient(rgba(0, 0, 0, 0.35),#0000002e), url(https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg);
+		background-color: #aec5ea;
+		background-size: cover;
+		background-position: bottom left;
+		width: 100%;
+  		height: 800px;
+  		/*padding-right: 50px;*/
+  		padding-left: 50px;
+  		margin: 0px;
 }
 
 @media only screen and (max-width: 660px){
