--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -66,10 +66,7 @@ h3, h4, h5{
 
 header{
 	background: #65acdb;
-	background-size: cover;
 	width: 100%;
-	height: 50px;
-	margin-top: 0px;
 	margin-bottom: 20px;
 	/*margin-right: 30px;*/
 	padding-top: 20px;
@@ -92,7 +89,7 @@ nav a{
 	text-align: center;
 	font-family: 'Playfair Display', serif;
 	font-size: 1.25em;
-	margin: 30px;
+	margin: 20px;
 	padding: 10px 10px;
 	text-decoration: none;
 	border: 2px solid white;
@@ -119,17 +116,17 @@ nav a:hover{
 #right{
 	background-color: #f2f2f2;
 	border: 1px black solid;
-	padding: 20px
+	padding: 20px;
 	margin-bottom: 10px;
 	margin-right: 20px;
 	float: right;
 	width: 30%;
 }
 
-#wrapper div{
+/*#wrapper div{
 	float: left;
 	width: 25%;
-}
+}*/
 
 #block{
 	background-color: #dededec2;
@@ -150,11 +147,6 @@ nav a:hover{
 	font-weight: 400;
 	font-size: 1.3em;
 	color: #fff;
-	height: 500px;
-	float: left;
-	width: 100%;
-	text-align: center;
-	line-height: 6em;
 	/*margin-right: 5px;*/
 
 }
@@ -167,11 +159,7 @@ nav a:hover{
 	font-weight: 400;
 	font-size: 1.3em;
 	color: #fff;
-	float: left;
-	width: 100%;
-	height: 500px;
-	text-align: center;
-	line-height: 6em;
+	
 }
 
 #reviews{
@@ -182,11 +170,6 @@ nav a:hover{
 	font-weight: 400;
 	font-size: 1.3em;
 	color: #000;
-	float: left;
-	width: 100%;
-	height: 500px;
-	text-align: center;
-	line-height: 6em;
 }
 
 
@@ -197,12 +180,7 @@ nav a:hover{
 	font-family: 'Playfair Display', serif;
 	font-weight: 400;
 	font-size: 1.3em;
-	color: #fff;
-	float: left;
-	width: 100%;
-	height: 500px;
-	text-align: center;
-	line-height: 6em;
+	color: #fff
 }
 
 #pesto{
@@ -269,11 +247,20 @@ footer {
     padding: 20px;
 }
 
-div / section {
+/*div / section {
     background-color: #FFE2B8;
     border: 1px black solid;
     padding: 20px;
 
+}*/
+
+.columns {
+	width: 25%;
+	float: left;
+	float: left;
+	height: 500px;
+	text-align: center;
+	line-height: 6em;
 }
 
 
@@ -283,21 +270,6 @@ div / section {
 	margin-bottom: 10px;
 	}
 
-	#right{
-	background-color: #f2f2f2;
-	border: 1px black solid;
-	padding: 20px
-	margin-bottom: 10px;
-	margin-right: 20px;
-	float: right;
-	width: 30%;
-	}
-
-	#left{
-	padding: 20px;
-	float: left;
-	width: 62%;
-	}
 
 }
 
@@ -313,21 +285,6 @@ div / section {
 		/*margin-top: 50px;*/
 	}
 
-	#right{
-		background-color: #f2f2f2;
-		border: 1px black solid;
-		padding: 20px
-		margin-bottom: 10px;
-		margin-right: 20px;
-		float: right;
-		width: 30%;
-	}
-
-	#left{
-		padding: 20px;
-		float: left;
-		width: 62%;
-	}
 
 	#welcome section{
 		padding: 20px;
@@ -352,22 +309,24 @@ div / section {
 		padding: 20px;
 	}
 
+	.columns {
+		width: 50%;
+	}
+
 }
 
 @media only screen and (max-width: 900px){
 	body{
 		font-size: 18px;
 	}
-	main{
-		width: 55%;
-		}
+
+	nav a{
+		margin: 10px;
+	}	
 }
 
 @media only screen and (max-width: 750px){
-	main{
-		width: auto;
-		float: none;
-	}
+	
 	#left{
 		width: auto;
 		float: none;
