--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -263,6 +263,7 @@ footer {
 	line-height: 6em;
 }
 
+/*Media Queries Below*/
 
 @media only screen and (max-width: 1870px){
 	#welcome{
@@ -311,6 +312,7 @@ footer {
 
 	.columns {
 		width: 50%;
+		font-size: 2em;
 	}
 
 }
@@ -325,15 +327,40 @@ footer {
 	}	
 }
 
-@media only screen and (max-width: 750px){
+@media only screen and (max-width: 850px){
 	
 	#left{
 		width: auto;
 		float: none;
+		font-size: 1em;
 	}
 	
 	#right{
 		display: none;
+	}
+
+	.columns{
+		width: 100%;
+		height: 5%;
+		font-size: 3.5em;
+		padding: 2% 0;
+	}
+
+	nav a{
+		margin: 2px;
+	}
+
+	#header{ 
+  	height: 400px;
+ 
+	}
+
+	.blogs{
+		font-size: 1.5em;
+	}
+
+	.blogi{
+
 	}
 
 	}
@@ -354,7 +381,12 @@ footer {
   		margin: 0px;
 }*/
 
-@media only screen and (max-width: 660px){
+@media only screen and (max-width: 730px){
+
+
+.columns{
+
+}
 
 }
 
