--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -390,15 +390,18 @@ nav a{
 }
 
 .columns{
+	font-size: 4em;
+}
+
+#header{ 
+  	height: 25%;
 
 }
 
-}
-
-@media only screen and (max-width: 730px){
+@media only screen and (max-width: px){
 
 nav a {
-	
+
 }
 
 	}
