--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -401,7 +401,9 @@ nav a{
 @media only screen and (max-width: px){
 
 nav a {
-
+	display: block;
+    text-align: center;
+    text-decoration: none;
 }
 
 	}
