--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -18,7 +18,6 @@ p{
 
 }
 
-
 #header{
 	background-image: linear-gradient(rgba(0, 0, 0, 0.35),#0000002e), url(https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg);
 	background-color: #aec5ea;
@@ -73,7 +72,34 @@ header{
 	padding-right: 50px;
 	padding-left: 50px;
 	text-align: center;
+	position: relative;
 
+}
+
+input {
+	position: absolute;
+	z-index: 9;
+	top: 0;
+	left: 0;
+	display: block;
+	opacity: 0;
+	width: 100%;
+	height: 100%
+}
+
+#hamburger {
+	width: 40px;
+	height: 40px;
+	padding: 4px 3px;
+	border:  2px solid #fff;
+}
+
+#hamburger span{
+	display: block;
+	width: 100%;
+	height: 2px;
+	background-color: #fff;
+	margin: 5px auto;
 }
 
 a{
