--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -76,32 +76,6 @@ header{
 
 }
 
-input {
-	position: absolute;
-	z-index: 9;
-	top: 0;
-	left: 0;
-	display: block;
-	opacity: 0;
-	width: 100%;
-	height: 100%
-}
-
-#hamburger {
-	width: 40px;
-	height: 40px;
-	padding: 4px 3px;
-	border:  2px solid #fff;
-}
-
-#hamburger span{
-	display: block;
-	width: 100%;
-	height: 2px;
-	background-color: #fff;
-	margin: 5px auto;
-}
-
 a{
 	text-align: center;
 	color: #578fb2;
@@ -361,8 +335,6 @@ footer {
 
 @media only screen and (max-width: 850px){
 
-
-
 	#left{
 		width: auto;
 		float: none;
@@ -445,9 +417,43 @@ footer {
 
 	#header{
   		height: 5%;
-
 		}
 
+	input {
+		position: absolute;
+		z-index: 9;
+		top: 0;
+		left: 0;
+		display: block;
+		opacity: 0;
+		width: 100%;
+		height: 100%
+	}
+
+	#hamburger {
+		display: block;
+		width: 40px;
+		height: 40px;
+		padding: 4px 3px;
+		border:  2px solid #fff;
+	}
+
+	#hamburger span{
+		display: block;
+		width: 100%;
+		height: 2px;
+		background-color: #fff;
+		margin: 5px auto;
+	}
+
+	input:checked ~ nav  {
+	max-height: 600px;
+	}
+
+	nav {
+max-height: 0;
+overflow: hidden;
+}
 	/*.blogi {
 		 display: none;
 	}*/
