--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -461,12 +461,12 @@ overflow: hidden;
 
 @media only screen and (max-width: 700px){
 
-nav a {
+/*nav a {
 	display: block;
     text-align: center;
     text-decoration: none;
    	border: none;
-}
+}*/
 
 	}
 
