--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -458,13 +458,24 @@ display: none;
 	}
 
 	input:checked ~ nav  {
-	height: 600px;
+	height:100px;
+	display: inline;
 	}
 
 	nav {
 display: none;
 height: 0;
 overflow: hidden;
+}
+
+nav a{
+	font-size: 1em;
+	border: none;
+	/*margin: 20px;
+	padding: 10px 10px;
+	text-decoration: none;
+	border: 2px solid white;
+	*/
 }
 	/*.blogi {
 		 display: none;
