--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -472,6 +472,7 @@ nav a{
 	font-size: 1em;
 	border: 1px solid white;
 	margin: 2.5%;
+	padding: 3;
 	/*margin: 20px;
 	padding: 10px 10px;
 	text-decoration: none;
