--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -470,9 +470,9 @@ overflow: hidden;
 
 nav a{
 	font-size: 1em;
-	border: 1px solid white;
+	border: none;
 	margin: 2.5%;
-	padding: 3;
+	padding: 1px;
 	/*margin: 20px;
 	padding: 10px 10px;
 	text-decoration: none;
@@ -481,7 +481,7 @@ nav a{
 }
 
 nav a:hover{
-	background-color: #020202;
+	color: #020202;
 }
 
 	/*.blogi {
